--- a/recipe/style.css
+++ b/recipe/style.css
@@ -4,10 +4,10 @@
 
 .wrap{
     max-width: 900px;
-    padding-top: 20px;
+    padding: 20px 0;
     margin: 0 auto;
     background-color: #f5f5f5;
-
+    font-family: "游ゴシック",YuGothic,"メイリオ",Meiryo,Helvetica,Arial,sans-serif;
 }
 
 .container{
@@ -22,7 +22,8 @@
 }
   
 .header h1 {
-    font-size: 80px;
+    display:none;
+    font-size: 70px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -37,6 +38,7 @@ img.top-img{
     height: 300px;
     width: 100%;
     object-fit: cover;
+    opacity: 0.7;
 }   
 
 
@@ -51,50 +53,40 @@ img.top-img{
 
 .result{
     width: 550px;
-    padding-left: 40px;
+    margin-left: 40px;
     text-align: left;
+    border-bottom: dotted 1px #000;
 }
-
 
 /* メニュー */
 
 .side{
     width: 190px;
     margin: 35px 10px;
-    
 }
 
-.f_btn {
-    margin-top:20px;
-    display: inline-block;
-    padding: 0.5em 1em;
-    text-decoration: none;
-    background: orange;
-    color: #fff;
-    border-bottom: solid 4px sandybrown;
-    border-radius: 3px;
+img.side-icon{
+    height: 40px;
+    width: auto;
 }
 
-.f_btn:active {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-    border-bottom: none;
+.menu{
+    display: block;
+    list-style: none;
+    padding: 0px;
 }
 
-.j_btn {
-    display: inline-block;
-    padding: 0.5em 1em;
-    text-decoration: none;
-    background: gray;
-    color: #FFF;
-    border-bottom: solid 4px silver;
-    border-radius: 3px;
+li{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: dotted 1px #000;
+    padding: 10px 20px 10px 0;
 }
 
-.j_btn:active {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-    border-bottom: none;
+li:hover {
+    opacity: 0.5;
+    position:relative;
+    top:1px;
 }
 
 /* --------------
@@ -107,23 +99,18 @@ img.top-img{
     margin: 5px auto;
     padding-bottom: 10px;
     box-shadow: 0px 0px 5px gray;
+    font-family: "游ゴシック",YuGothic,"メイリオ",Meiryo,Helvetica,Arial,sans-serif;
 }
 
 .form-inner{
     width: 330px;
     margin: 10px auto 30px;
+    padding-top: 20px;
 }
 
 .form-inner p{
     color: silver;
 }
-
-.form-inner h1{
-    color: gray;
-    padding-top: 30px;
-    border-bottom: dashed 3px gray;
-}
-
 
 .form-parts {
     height: 36px;
@@ -134,12 +121,21 @@ img.top-img{
     color: #222222;
 } 
 
+input:focus {
+    outline: 0;
+  }
+
 select {
     height: 36px;
     width: 150x;
     margin: 8px auto 8px 8px;
     font-size: 12px;
     background-color: #fff;
+}
+
+
+select:focus {
+    outline: 0;
 }
 
 textarea{
@@ -149,7 +145,30 @@ textarea{
     color: #222222;
 }
 
+textarea:focus {
+    outline: 0;
+}
+
 #img1 {
     margin: 0px auto;
 }
 
+.j_btn{
+    display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: silver;/*ボタン色*/
+  color: gray;/*ボタン色より暗く*/
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  border-bottom: solid 3px gray;
+  border-radius: 3px;
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.5);
+}
+
+.j_btn:active  {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+    border-bottom: none;
+  }
